updated env variables and added env.example
